--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,8 @@ h2 {
 }
 
 .footer-content {
+  display: flex;
+  justify-content: center;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
